src/test/deca/syntax/valid/methodCall-simpleMethodCall.deca
class A {
    int coco;

    void manger() {
    }
}

{
    A a;
    a.manger();
}