src/test/deca/syntax/invalid/instanceof-space.deca
{
    A a;
    a instance of A;
}
